@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2008 - 2015, Phoronix Media
-	Copyright (C) 2008 - 2015, Michael Larabel
+	Copyright (C) 2008 - 2020, Phoronix Media
+	Copyright (C) 2008 - 2020, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -34,7 +34,7 @@ class install_dependencies implements pts_option_interface
 	public static function run($r)
 	{
 		$test_profiles = pts_types::identifiers_to_test_profile_objects($r, true, true);
-		pts_external_dependencies::install_dependencies($test_profiles);
+		pts_external_dependencies::install_dependencies($test_profiles, false, false, true);
 	}
 }
 
